syntax = "proto3";

option csharp_namespace = "SpaceBattleGrpc";

package server;

// The greeting service definition.
service CommandProcesser {
  rpc SendCommand (CommandRequest) returns (CommandResponse);
}

message Option {
  string key = 1;
  string value = 2;
}

message CommandRequest {
  string game_id = 1;
  string command = 2;
  repeated Option argv = 3;
}

message CommandResponse {
  int32 status = 1;
}
